<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">玩啥</string>
    <string name="action_settings">Settings</string>
    <string name="recommend">推荐</string>
    <string name="place">目的地</string>
    <string name="together">一起</string>
    <string name="nearby">附近</string>
    <string name="from">起</string>
    <string name="action_sort">排序</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="day">天</string>
    <string name="overview">产品介绍</string>
    <string name="highlight">亮点</string>
    <string name="review">评论</string>
    <string name="book_now">预订</string>
    <string name="next_step">下一步</string>
    <string name="five_star">五星</string>
    <string name="four_star">四星</string>
    <string name="three_star">三星</string>
    <string name="two_star">二星</string>
    <string name="one_star">一星</string>
    <string name="more_review">更多评论</string>
    <string name="confirm_booking">确认预订</string>
    <string name="date">日期</string>
    <string name="select_date">请选择日期</string>
    <string name="time_not_found">当日没有出行</string>
    <string name="member">人数</string>
    <string name="price">价格</string>
    <string name="pick_up_location">接送地点</string>
    <string name="activity_time">时间</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="click_to_login">点击登录</string>
    <string name="register_username_hint">请输入有效的邮箱地址</string>
    <string name="register_password_hint">请输入6位以上密码</string>
    <string name="register_confirm_password_hint">请保证两次密码输入一致</string>
    <string name="input_current_password_hint">请输入当前密码</string>
    <string name="change_password_hint">请输入6位以上新密码</string>
    <string name="confirm_change_password_hint">请保证两次密码输入一致</string>
    <string name="confirm_change">确认修改</string>
    <string name="login_username_hint">用户名/邮箱地址/手机号</string>
    <string name="login_password_hint">密码</string>
    <string name="password_hint">登录密码</string>
    <string name="my_account">我的账户</string>
    <string name="my_status">我的动态</string>
    <string name="my_booking">我的预订</string>
    <string name="my_wishlist">我的心愿单</string>
    <string name="my_view_list">我的浏览记录</string>
    <string name="my_search_list">我的搜索记录</string>
    <string name="products_number">个好玩的地方</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="japanese">日文</string>
    <string name="sort_default">默认排序</string>
    <string name="sort_price_up">按价格从低到高</string>
    <string name="sort_comment">按评价</string>
    <string name="sort_popularity">按人气</string>
    <string name="sort_time_long">时间从长到短</string>
    <string name="sort_time_short">时间从短到长</string>
    <string name="sort_discount">折扣产品优先</string>
    <string name="search_title">搜索城市产品</string>
    <string name="search_hint">请输入文字&#8230;</string>
    <string name="person">人</string>
    <string name="leave">出发</string>
    <string name="drawer_open">打开侧边栏</string>
    <string name="drawer_close">关闭侧边栏</string>
    <string name="camera">扫一扫</string>
    <string name="all_order">所有订单</string>
    <string name="want_to_go">想去</string>
    <string name="guide_book">我的路书</string>
    <string name="discount">优惠券</string>
    <string name="my_message">我的消息</string>
    <string name="settings">设置</string>
    <string name="system_settings">系统设置</string>
    <string name="sight">景点</string>
    <string name="expense_descr">费用说明</string>
    <string name="detail_sight">景点资讯</string>
    <string name="detail_product">活动详情</string>
    <string name="instruction_sight">温馨提示</string>
    <string name="instruction_product">如何使用</string>
    <string name="orderDescr">预定提醒</string>
    <string name="show_all_country">查看全部国家</string>
    <string name="all_city_list">所有城市列表</string>
    <string name="user_nickname">显示昵称</string>
    <string name="user_info">账户信息</string>
    <string name="user_email">注册邮箱</string>
    <string name="user_mobile">注册手机</string>
    <string name="not_bind">未绑定</string>
    <string name="user_change_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="loading_waiting">努力加载中&#8230;</string>
    <string name="without_wifi">非WIFI网络下加载图片</string>
    <string name="feedback">意见反馈</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="wansha_recommend">大玩家精选</string>
    <string name="booking_date">出行日期</string>
    <string name="booking_members">出行人数</string>
    <string name="adult">成人</string>
    <string name="child">儿童</string>
    <string name="infant">婴儿</string>
    <string name="free">免费</string>
    <string name="exceed_max">超过订单人数上限</string>
    <string name="total_price_is">订单总额：</string>
    <string name="total_price">订单总额</string>
    <string name="origin_price">门市价</string>
    <string name="contact">联系人</string>
    <string name="name">姓名</string>
    <string name="tel">电话</string>
    <string name="email">邮箱</string>
    <string name="travel_member">出行人</string>
    <string name="confirm_to_pay">确认支付</string>
    <string name="pinyin">拼音</string>
    <string name="passport">护照号</string>
    <string name="mobile_number">手机号码</string>
    <string name="finish">完成</string>
    <string name="please_input_traveller_name">请输入出行人姓名</string>
    <string name="please_select_date">请选择出行日期</string>
    <string name="please_add_traveller">请至少选择一个出行人</string>
    <string name="please_input_contact_name">请输入出行人姓名</string>
    <string name="please_input_contact_method">请留下至少一种联系方式</string>
    <string name="wrong_email_format">邮箱格式不正确</string>
    <string name="book_failed">预订错误</string>
    <string name="order_number">订单号</string>
    <string name="order_time">下单时间</string>
    <string name="download">下载</string>
    <string name="is_downloading">正在下载</string>
    <string name="wait_download">等待下载</string>
    <string name="stop_download">停止下载</string>
    <string name="start_download">开始下载</string>
    <string name="download_error">下载出错</string>
    <string name="complete_download">下载完成</string>
    <string name="is_stopping">正在暂停</string>
    <string name="delete_item">删除当前项目</string>
    <string name="select_option">请选择需要的操作</string>
    <string name="all_country_products">所有国家景点 ALL COUNTRIES</string>
    <string name="all_city_products">的所有景点 ALL CITIES</string>
    <string name="clear_download_list">取消所有下载</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>