<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/fragment_login_vertical_margin"
    android:paddingLeft="@dimen/fragment_login_horizontal_margin"
    android:paddingRight="@dimen/fragment_login_horizontal_margin"
    android:paddingTop="@dimen/fragment_login_vertical_margin" >

    <EditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_current_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/change_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/confirm_change_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" 
        android:text="@string/confirm_change"/>

</LinearLayout>