<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fragment_login_vertical_margin"
        android:paddingLeft="@dimen/fragment_login_horizontal_margin"
        android:paddingRight="@dimen/fragment_login_horizontal_margin"
        android:paddingTop="@dimen/fragment_login_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/date"
                android:textSize="@dimen/medium_text_size" />

            <Button
                android:id="@+id/select_date_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/booking_button_height"
                android:background="@drawable/button_bg"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/select_date"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/activity_time"
                android:textSize="@dimen/medium_text_size" />

            <Spinner
                android:id="@+id/spinner_activity_time"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/booking_button_height"
                android:clickable="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/member"
                android:textSize="@dimen/medium_text_size" />

            <Button
                android:id="@+id/member_minus"
                android:layout_width="@dimen/booking_button_height"
                android:layout_height="@dimen/booking_button_height"
                android:background="@drawable/button_bg"
                android:text="-" />

            <EditText
                android:id="@+id/booking_member"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:maxLength="2"
                android:text="1" />

            <Button
                android:id="@+id/member_plus"
                android:layout_width="@dimen/booking_button_height"
                android:layout_height="@dimen/booking_button_height"
                android:background="@drawable/button_bg"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/price"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/booking_price"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/green"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/confirm_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/confirm_booking"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>