<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/layout_without_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/user_admin_padding_vertical"
        android:paddingLeft="@dimen/user_admin_padding_horizontal"
        android:paddingRight="@dimen/user_admin_padding_horizontal"
        android:paddingTop="@dimen/user_admin_padding_vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/without_wifi"
            android:textSize="@dimen/user_admin_title_size" />

        <Switch
            android:id="@+id/without_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:checked="true"
            android:textOff="OFF"
            android:textOn="ON"
            android:textSize="@dimen/user_admin_title_size" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/layout_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/user_admin_padding_vertical"
        android:paddingLeft="@dimen/user_admin_padding_horizontal"
        android:paddingRight="@dimen/user_admin_padding_horizontal"
        android:paddingTop="@dimen/user_admin_padding_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/feedback"
            android:textSize="@dimen/user_admin_title_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/layout_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/user_admin_padding_vertical"
        android:paddingLeft="@dimen/user_admin_padding_horizontal"
        android:paddingRight="@dimen/user_admin_padding_horizontal"
        android:paddingTop="@dimen/user_admin_padding_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/clear_cache"
            android:textSize="@dimen/user_admin_title_size" />

        <TextView
            android:id="@+id/clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/user_admin_title_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/layout_check_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/user_admin_padding_vertical"
        android:paddingLeft="@dimen/user_admin_padding_horizontal"
        android:paddingRight="@dimen/user_admin_padding_horizontal"
        android:paddingTop="@dimen/user_admin_padding_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/check_update"
            android:textSize="@dimen/user_admin_title_size" />

        <TextView
            android:id="@+id/check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/user_admin_title_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/user_admin_padding_vertical"
        android:paddingLeft="@dimen/user_admin_padding_horizontal"
        android:paddingRight="@dimen/user_admin_padding_horizontal"
        android:paddingTop="@dimen/user_admin_padding_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/about"
            android:textSize="@dimen/user_admin_title_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>