<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/fragment_login_vertical_margin"
        android:paddingLeft="@dimen/fragment_login_horizontal_margin"
        android:paddingRight="@dimen/fragment_login_horizontal_margin"
        android:paddingTop="@dimen/fragment_login_vertical_margin"
        android:background="@color/activity_background" >

        <RelativeLayout
            android:id="@+id/logo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:minHeight="@dimen/logo_size"
                android:minWidth="@dimen/logo_size"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="@dimen/my_status_icon_size"
                    android:layout_height="@dimen/my_status_icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user_login"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/logo_layout"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:hint="@string/register_hint"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/login_username"
            android:layout_marginBottom="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/login_password"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login" />
    </RelativeLayout>

</ScrollView>